--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,63 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+:root{
+  --swiper-pagination-color: rgb(218, 165, 32);
+  --swiper-pagination-left: auto;
+  --swiper-pagination-right: 8px;
+  --swiper-pagination-bottom: 8px;
+  --swiper-pagination-top: auto;
+  --swiper-pagination-fraction-color: inherit;
+  --swiper-pagination-progressbar-bg-color: rgba(0, 0, 0, 0.25);
+  --swiper-pagination-progressbar-size: 4px;
+  --swiper-pagination-bullet-size: 8px;
+  --swiper-pagination-bullet-width: 8px;
+  --swiper-pagination-bullet-height: 8px;
+  --swiper-pagination-bullet-inactive-color: #000;
+  --swiper-pagination-bullet-inactive-opacity: 0.2;
+  --swiper-pagination-bullet-opacity: 1;
+  --swiper-pagination-bullet-horizontal-gap: 4px;
+  --swiper-pagination-bullet-vertical-gap: 6px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+a, li {
+  text-decoration: none;
+  color: inherit;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+li {
+  list-style: none;
+}
+
+.banner {
+  background-image: linear-gradient(45deg, rgba(0,0,0,.65) 100%, rgba(0,0,0,.0)),url('/studio.jpg');
+}
+
+#portfolio > h1::before {
+  content: "";
+  display: block;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  max-width: 888px;
+  height: 1px;
+  background: #D9D9D9;
+  opacity: .15;
+  margin-bottom: 3rem;
+}
+
+#msg-content > article > p::after{
+  content: "";
+  display: block;
+  width: 66px;
+  height: 2px;
+  background: #1E1E1E;
+  margin-top: 1rem;
+  opacity: .15;
+}
+
+.swiper {
+  width: 600px;
+  height: 280px;
 }
